--- a/text animation.html
+++ b/text animation.html
@@ -255,7 +255,7 @@ body {
 
 
 
-<!-- second line    -->
+<!-- forth line    -->
 <div class="dance-1">
     
     <p class="dance-letters-1 letter-C">E</p>
